k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s1ie-exams
  namespace: s1ie
spec:
  type: NodePort
  selector:
    app: s1ie-exams
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
